@@ -5,20 +5,26 @@ GOPATH := $(CURDIR)/$(_GOPATH)
 GO=go
 HOCKEYPATH=$(GOPATH)/src/launchpad.net/hockeypuck
 
-all: get $(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo $(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load
+all: get \
+	$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo \
+	$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-pq \
+	$(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load
 
-get: $(HOCKEYPATH)/mgo
+# 'get' resolves & fetches dependencies into our build $GOPATH
+get: $(HOCKEYPATH)/mgo $(HOCKEYPATH)/pq
 
 $(HOCKEYPATH)/mgo:
 	@echo GOPATH is $(GOPATH)
 	mkdir -p $(GOPATH)
 	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/mgo
 
-$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo:
-	cd $(HOCKEYPATH)/cmd/hockeypuck-mgo; GOPATH="${GOPATH}" $(GO) build .
+$(HOCKEYPATH)/pq:
+	@echo GOPATH is $(GOPATH)
+	mkdir -p $(GOPATH)
+	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/pq
 
-$(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load:
-	cd $(HOCKEYPATH)/cmd/hockeypuck-load; GOPATH="${GOPATH}" $(GO) build .
+$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-%:
+	cd $(HOCKEYPATH)/cmd/hockeypuck-$*; GOPATH="${GOPATH}" $(GO) build .
 
 debsrc: debbin clean
 	debuild -S
